--- a/software/stamp/sample/components/kustomization.yaml
+++ b/software/stamp/sample/components/kustomization.yaml
@@ -7,8 +7,8 @@ kind: Kustomization
 # Component resources - deployed in order
 resources:
   # Shared platform components (optional) - order matters for dependencies
-  - ../../components/cert-manager
-  - ../../components/registry
+  - ../../../components/cert-manager
+  - ../../../components/registry
 
   # Stamp-specific components
   # - ingress-nginx/namespace.yaml
