--- a/software/components/cert-manager/issuer.yaml
+++ b/software/components/cert-manager/issuer.yaml
@@ -1,4 +1,5 @@
 ---
+# Self-signed issuer for local development
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -18,3 +19,39 @@ metadata:
 spec:
   ca:
     secretName: ca-key-pair
+---
+# Let's Encrypt staging issuer for testing
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-staging
+  labels:
+    osdu-ci.component: cert-manager
+spec:
+  acme:
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    email: admin@example.com  # Replace with actual email in production
+    privateKeySecretRef:
+      name: letsencrypt-staging
+    solvers:
+    - http01:
+        ingress:
+          class: nginx
+---
+# Let's Encrypt production issuer
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+  labels:
+    osdu-ci.component: cert-manager
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: admin@example.com  # Replace with actual email in production
+    privateKeySecretRef:
+      name: letsencrypt-prod
+    solvers:
+    - http01:
+        ingress:
+          class: nginx
