--- a/software/components/cert-manager/certs/kustomization.yaml
+++ b/software/components/cert-manager/certs/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Cert-manager certificates resources
+# Cert-manager certificates resources (requires CRDs from Phase 1)
 resources:
+  - ../issuer.yaml
   - certificates.yaml
