--- a/software/components/cert-manager/kustomization.yaml
+++ b/software/components/cert-manager/kustomization.yaml
@@ -1,9 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Cert-manager component resources
+# Cert-manager component resources (CRDs will be installed by HelmRelease)
 resources:
   - namespace.yaml
   - source.yaml
   - release.yaml
-  - issuer.yaml
