--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Data directory (runtime artifacts, credentials, storage)
 data/
 
+# Git Worktree directories
+trees/
+
 # Test data directory
 test-data/*
 !test-data/.gitkeep
