--- a/software/apps/registry-demo/app.yaml
+++ b/software/apps/registry-demo/app.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: registry-demo
-        image: localhost:5045/registry-demo:latest
+        image: registry.registry.svc.cluster.local:5000/registry-demo:latest
         ports:
         - containerPort: 80
         resources:
@@ -33,7 +33,7 @@ spec:
         - name: DEMO_TYPE
           value: "registry-integration"
         - name: REGISTRY_SOURCE
-          value: "localhost:5045"
+          value: "registry.registry.svc.cluster.local:5000"
 ---
 apiVersion: v1
 kind: Service
